...
        <variable
            name="item"
            type="com.homindolentrahar.misbar.domain.models.ShowsModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/carousel_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_poster"
...
            android:layout_marginTop="@dimen/medium_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_poster">

            <TextView
                android:id="@+id/tv_title"
                style="@style/ItemTitle.CarouselItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.name}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
...
